# stock-analyzer

./: Cargo.toml
src/: collector.rs  helper.rs  main.rs  model.rs  router.rs
src/collector/: binance.rs  rate.rs  upbit.rs
src/router/: premium.rs  websocket.rs
