[package]
name = "stock-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
# 비동기 실행을 위한 엔진
tokio = { version = "1", features = ["full"] }
# HTTP 요청을 보내기 위한 라이브러리
reqwest = { version = "0.11", features = ["json"] }
# JSON 파싱을 위한 도구
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 에러 처리를 편하게 해주는 도구
anyhow = "1.0"
yfinance-rs = "0.7.2"